# Wintap-Analytics

./: .gitignore  Makefile  Pipfile  README.md  requirements.txt
2025-acme4-explore/: .flake8  .gitignore  ACME4-rename-database-columns.ipynb  README.md  intro.ipynb  process-metadata-irregularities.ipynb  process-name-curation.ipynb  process-platform-specific.ipynb  process_class.json  pyproject.toml
2025-acme4-explore/src/acme4_explore/: __init__.py
annotations/acme4/caldera/: generate_markdown.py
annotations/acme4/sql/: Actor1.sql
experimental/covering_arrays/: README.md
experimental/covering_arrays/notebooks/: ex_MacOS.ipynb
experimental/covering_arrays/src/: covering_array_fuzzer.py  download_covering_array.py  random_fuzzer.py  utils.py
notebooks/: BuildNetworkXProcessTrees.ipynb  BuildProcessLeafNodes.ipynb  ChartDemo.ipynb  GraphDemo.ipynb  ProcessTreeLeafNodes.ipynb  SampleQueries.ipynb  requirements.txt  wintapgraph.py
streamlit/projects/DataQA/: DataQA_settings.toml  README.md  requirements.txt
streamlit/projects/common/: analytics-ddl.sql  debug_page.py  dqautil.py  page_frags.py  process-queries.sql  st_content_util.py  st_graph_util.py  streamlit.toml  utils.py  wintapgraph.py
streamlit/projects/eda/: Dockerfile  README.md  eda_settings.toml
streamlit/projects/streamlit-hub/: main.py  requirements.txt  (+1 more)
workshop/: 1_Download_Resources.md  2_Wintap.md  3_SQL_Tools.md  4_Python_Tools.md  benignware-inspection.md  duckdb-cli.md  sample-data.md  simple-sql.md  workshop-command-reference.md
workshop/sql-examples/: summaries.sql
(+37 files in other folders)
