[project]
name = "acme4_explore"
version = "0.1.0"
description = "2025 ACME4 Explore at-home research surge"
readme = "README.md"
authors = [
    { name = "Wintap Friends", email = "wintap@friends" }
]
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "datamapplot>=0.6.4",
    "duckdb>=1.3.2",
    "fast-hdbscan>=0.2.2",
    "flake8>=7.3.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jupysql>=0.11.1",
    "jupyterlab>=4.4.7",
    "marimo>=0.15.2",
    "mypy>=1.17.1",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "python-lsp-server>=1.13.1",
    "quak>=0.3.2",
    "scikit-learn>=1.7.1",
    "sentencepiece>=0.2.1",
    "toml>=0.10.2",
    "umap-learn>=0.5.9.post2",
    "vectorizers>=0.2.2",
    "zstandard>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
